WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
243474
AX: On iOS, display:contents elements are inserted in the wrong position when they have inline renderer siblings
https://bugs.webkit.org/show_bug.cgi?id=243474
Summary
AX: On iOS, display:contents elements are inserted in the wrong position when...
Tyler Wilcock
Reported
2022-08-02 16:17:09 PDT
This issue also existed on the Mac before:
https://bugs.webkit.org/show_bug.cgi?id=243373
(AX: An unnecessary group is created for every block-flow box with no other useful AX semantics) That fix wasn't enough for iOS because iOS does not ignore AccessibilityRole::Unknown elements, and the groups affected by that patch get an unknown role.
Attachments
Patch
(16.76 KB, patch)
2022-08-02 16:26 PDT
,
Tyler Wilcock
no flags
Details
Formatted Diff
Diff
Patch
(18.34 KB, patch)
2022-08-02 16:42 PDT
,
Tyler Wilcock
no flags
Details
Formatted Diff
Diff
Patch
(18.37 KB, patch)
2022-08-02 21:30 PDT
,
Tyler Wilcock
no flags
Details
Formatted Diff
Diff
Patch
(18.92 KB, patch)
2022-08-03 10:03 PDT
,
Tyler Wilcock
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-08-02 16:17:23 PDT
<
rdar://problem/98014680
>
Tyler Wilcock
Comment 2
2022-08-02 16:26:24 PDT
Created
attachment 461363
[details]
Patch
Tyler Wilcock
Comment 3
2022-08-02 16:42:20 PDT
Created
attachment 461364
[details]
Patch
Tyler Wilcock
Comment 4
2022-08-02 21:30:37 PDT
Created
attachment 461369
[details]
Patch
Tyler Wilcock
Comment 5
2022-08-03 10:03:42 PDT
Created
attachment 461382
[details]
Patch
EWS
Comment 6
2022-08-03 22:16:59 PDT
Committed
253102@main
(44ea8a482416): <
https://commits.webkit.org/253102@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 461382
[details]
.
Adrian Roselli
Comment 7
2023-05-30 05:01:56 PDT
I am not convinced this issue was fixed. I filed a new one that goes into more detail on the `display: contents` impacts on tables (along with other `display` issues):
Bug 257458
- AX: Tables with display properties are skipped, report wrong col/row counts
https://bugs.webkit.org/show_bug.cgi?id=257458
Specifically: 17. Tables with `display: contents` on the `<td>` cannot be navigated into using swipe gestures (swipe right or left). 18. Tables with `display: contents` on the `<td>` are skipped when using read-all.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug