Cherry-pick 44ea8a482416. rdar://problem/98014680

AX: On iOS, display:contents elements are inserted in the wrong position when they have inline renderer siblings
    https://bugs.webkit.org/show_bug.cgi?id=243474
    rdar://problem/98014680

    Reviewed by Chris Fleizach.

    This issue also existed on the Mac before:

    https://bugs.webkit.org/show_bug.cgi?id=243373 (AX: An unnecessary group is created for every block-flow box with no other useful AX semantics)

    That fix wasn't enough for iOS because iOS does not ignore AccessibilityRole::Unknown
    elements, and the groups affected by that patch get an unknown role.

    In this patch, iOS now ignores AccessibilityRole::Unknown elements, matching the Mac behavior.

    After making this change, I noticed accessibility/table-exposure-updates-dynamically.html
    started failing. This is because when the exposure of an AccessibilityTable
    changes dynamically, we call AccessibilityTable::updateChildrenRoles to update
    the role of the cells within the table because their role is dependent on whether
    their parent table is exposed. This is correct, but not enough -- we also need to
    update the role of any AccessibilityRow, since their role is equally dependent on
    the parent table exposure status. This patch does this to make this test pass again.

    Finally, this patch adds a new test:

    accessibility/display-contents-object-ordering.html

    Which verifies that we insert display:contents elements in the correct position in the
    AX tree.

    * LayoutTests/accessibility/display-contents-object-ordering-expected.txt: Added.
    * LayoutTests/accessibility/display-contents-object-ordering.html: Added.
    * LayoutTests/accessibility/ios-simulator/figure-element-expected.txt:
    * LayoutTests/accessibility/ios-simulator/figure-element.html:
    * LayoutTests/platform/ios/TestExpectations:
    Enable new test display-contents-object-ordering.html.
    * LayoutTests/platform/glib/TestExpectations:
    * LayoutTests/platform/win/TestExpectations:
    Disable new test display-contents-object-ordering.html.

    * LayoutTests/platform/ios/accessibility/aria-roles-unignored-expected.txt:
    Remove the now ignored Role::Unknown element from the tree since it's ignored.
    * LayoutTests/platform/ios/accessibility/display-contents-object-ordering-expected.txt: Added.
    * Source/WebCore/accessibility/AccessibilityTable.cpp:
    (WebCore::AccessibilityTable::updateChildrenRoles):
    * Source/WebCore/accessibility/ios/AccessibilityObjectIOS.mm:
    (WebCore::AccessibilityObject::accessibilityPlatformIncludesObject const):
    Ignore AccessibilityRole::Unknown objects.

    Canonical link: https://commits.webkit.org/253102@main

Canonical link: https://commits.webkit.org/252432.178@safari-7614-branch